--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     <button type="button" class="offre-btn">Voir L'Offre</button>
             </div>
             <div class="section">
-                <img src="Images/Relax-PROTEINEXPRESS_360x.jpg" alt="">
+                <img src="../Images/Relax-PROTEINEXPRESS_360x.jpg" alt="">
                 <h3>Vitamin Express</h3>
                 <p>VitaminExpress est l'un des principaux magasins de vitamines en ligne pour les vitamines de haute qualité et d'autres produits de substances vitales. Depuis plus de 20 ans, de plus en plus de clients font confiance à nos produits de haute qualité, à notre excellent service et à notre livraison rapide. Notre objectif est que chaque achat chez VitaminExpress soit un pur plaisir.</p>
                 <button type="button" class="offre-btn">Voir L'Offre</button>
             </div>
             <div class="section">
-                <img src="Images/logo-bio-header.png" alt="">
+                <img src="../Images/logo-bio-header.png" alt="">
                 <h3> Intermarché Mangez Bio pas Cher</h3>
                 <p>Mangez des produits de bonne qualités pour votre santé et pas cher pour votre budget Le Drive, c’est le mode de retrait le plus rapide. Pour cela, il faut passer sa commande en ligne ou sur l’application, puis venir la retirer en magasin. Les courses sont chargées dans votre coffre en moins de 5 minutes</p>
                 <button type="button" class="offer-btn">Voir L'Offre</button>
@@ -82,7 +82,7 @@
             <p>Tu dois prendre soin de toi et de ta beauté garde toi toujours belle car tu le mérite</p>
             <div class="beauty-content">
                 <div class="card">
-                    <img class="card-image" src="Images/0dd8757aa81f715a48048b926431766a.jpg" alt="" />
+                    <img class="card-image" src="../Images/0dd8757aa81f715a48048b926431766a.jpg" alt="" />
                     <div class="card-info">
                         <h3 class="card-title">JurllyShe</h3>
                         <p>Profite de l'offre de momment sur tous les produits sur le site</p>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-image" src="Images/Nadula_Hair_Logo.jpg" alt="" />
+                    <img class="card-image" src="../Images/Nadula_Hair_Logo.jpg" alt="" />
                     <div class="card-info">
                         <h3 class="card-title">Nadula Hair</h3>
                         <p>Profite de l'offre de momment sur tous les produits sur le site </p>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-image" src="Images/klaiyihaircom.jpg" alt="" />
+                    <img class="card-image" src="../Images/klaiyihaircom.jpg" alt="" />
                     <div class="card-info">
                         <h3 class="card-title">Klaiyi Hair</h3>
                         <p>Profite de l'offre de momment sur tous les produits sur le site </p>
@@ -116,7 +116,7 @@
 
             <div class="about-content">
                 <div class="about-image" >
-                <img src="/Images/o.jpg" alt="" />
+                <img src="../Images/o.jpg" alt="" />
             </div>
             <div class="about-text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse neque dolor adipisci nulla quidem, eaque soluta, rem ab praesentium voluptas tenetur nostrum unde officiis assumenda ipsa veritatis distinctio molestiae dolorum.</p>
