--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <div class="about-content">
                 <div class="about-image" >
-                <img src="../Images/o.jpg" alt="" />
+                <img src="/Images/o.jpg" alt="" />
             </div>
             <div class="about-text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse neque dolor adipisci nulla quidem, eaque soluta, rem ab praesentium voluptas tenetur nostrum unde officiis assumenda ipsa veritatis distinctio molestiae dolorum.</p>
