--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <h2 class="special-heading">Health Care</h2>
             <div class="section">
-                <img src="../Images/Promo-Mobile-344x235-57.jpg" alt="">
+                <img src="/Images/Promo-Mobile-344x235-57.jpg" alt="">
                 <h3>Thalasso Profite de Votre Vie</h3>
                 <p>Thalasseo est l’agence de voyages spécialiste de la Thalasso et du bien-être ! 
 
