--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <h2 class="special-heading">Health Care</h2>
             <div class="section">
-                <img src="/Images/Promo-Mobile-344x235-57.jpg" alt="">
+                <img src="Images/Promo-Mobile-344x235-57.jpg" alt="">
                 <h3>Thalasso Profite de Votre Vie</h3>
                 <p>Thalasseo est l’agence de voyages spécialiste de la Thalasso et du bien-être ! 
 
@@ -61,13 +61,13 @@
                     <button type="button" class="offre-btn">Voir L'Offre</button>
             </div>
             <div class="section">
-                <img src="../Images/Relax-PROTEINEXPRESS_360x.jpg" alt="">
+                <img src="Images/Relax-PROTEINEXPRESS_360x.jpg" alt="">
                 <h3>Vitamin Express</h3>
                 <p>VitaminExpress est l'un des principaux magasins de vitamines en ligne pour les vitamines de haute qualité et d'autres produits de substances vitales. Depuis plus de 20 ans, de plus en plus de clients font confiance à nos produits de haute qualité, à notre excellent service et à notre livraison rapide. Notre objectif est que chaque achat chez VitaminExpress soit un pur plaisir.</p>
                 <button type="button" class="offre-btn">Voir L'Offre</button>
             </div>
             <div class="section">
-                <img src="../Images/logo-bio-header.png" alt="">
+                <img src="Images/logo-bio-header.png" alt="">
                 <h3> Intermarché Mangez Bio pas Cher</h3>
                 <p>Mangez des produits de bonne qualités pour votre santé et pas cher pour votre budget Le Drive, c’est le mode de retrait le plus rapide. Pour cela, il faut passer sa commande en ligne ou sur l’application, puis venir la retirer en magasin. Les courses sont chargées dans votre coffre en moins de 5 minutes</p>
                 <button type="button" class="offer-btn">Voir L'Offre</button>
