--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>Tu dois prendre soin de toi et de ta beauté garde toi toujours belle car tu le mérite</p>
             <div class="beauty-content">
                 <div class="card">
-                    <img class="card-image" src="../Images/0dd8757aa81f715a48048b926431766a.jpg" alt="" />
+                    <img class="card-image" src="images/0dd8757aa81f715a48048b926431766a.jpg" alt="" />
                     <div class="card-info">
                         <h3 class="card-title">JurllyShe</h3>
                         <p>Profite de l'offre de momment sur tous les produits sur le site</p>
@@ -116,7 +116,7 @@
 
             <div class="about-content">
                 <div class="about-image" >
-                <img src="/Images/o.jpg" alt="" />
+                <img src="images/o.jpg" alt="" />
             </div>
             <div class="about-text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse neque dolor adipisci nulla quidem, eaque soluta, rem ab praesentium voluptas tenetur nostrum unde officiis assumenda ipsa veritatis distinctio molestiae dolorum.</p>
