--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Start Header-->
     <div class="header">
         <div class="container">
-            <img class="logo" src="Images/MH Health Care.png" alt="">
+            <img class="logo" src="./Images/MH Health Care.png" alt="">
             <div class="links">
                 <span class="icons">
                     <span></span>
