--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>Tu dois prendre soin de toi et de ta beauté garde toi toujours belle car tu le mérite</p>
             <div class="beauty-content">
                 <div class="card">
-                    <img class="card-image" src="./Images/jurrlyShe.JPG" alt="" />
+                    <img class="card-image" src="./Images/Massage Relaxation (Accessoires)3 (1).WEBP" alt="" />
                     <div class="card-info">
                         <h3 class="card-title">JurllyShe</h3>
                         <p>Profite de l'offre de momment sur tous les produits sur le site</p>
