--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Normalize Css Files-->
     <link rel="stylesheet" href="Css/normalize.css">
     <!--Add icon Files-->
-    <link rel="stylesheet" href="Css/all.css">
+    <link rel="stylesheet" href="./Css/all.css">
     <!--Add the work sans font from google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
